--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/vendors/jquery.js"></script>
+  <script src="/scripts/client.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/style.css"/>
+
   <title>To Do!</title>
 </head>
 <body>
