--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,28 @@
   <title>To Do!</title>
 </head>
 <body>
+  <h1>Kelly's To Do List</h1>
+  <div id="taskForm">
+    <label htmlFor="taskInput">Name of Task</label>
+    <input type="text" id="taskInput" placeholder="Name of Task">
+    <button id="addTask">Add Task</button>
+  </div>
+  <div>
+    <h2>To Do:</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Task</th>
+          <th>Status</th>
+          <th>Complete</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody id="taskList">
+        
+      </tbody>
+    </table>
+  </div>
   
 </body>
 </html>
