--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
   <script src="/vendors/jquery.js"></script>
   <script src="/scripts/client.js"></script>
   <link rel="stylesheet" type="text/css" href="styles/style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
   <title>To Do!</title>
 </head>
