played with bootstrap, did not use much

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,14 +13,16 @@
 
   <title>To Do!</title>
 </head>
-<body>
+<header>
   <h1>Kelly's To Do List</h1>
+</header>
+<body>
   <div id="taskForm">
     <label htmlFor="taskInput">Name of Task</label>
     <input type="text" id="taskInput" placeholder="Name of Task">
     <button id="addTask">Add Task</button>
   </div>
-  <div>
+  <div id="toDoList">
     <h2>To Do:</h2>
     <table>
       <thead>
